--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --header-color: rgb(254,254,255); 
   --font-color: black; 
@@ -14,10 +18,9 @@
   --background-jumbotrom:rgb(181,208,231);
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --border-card:1px solid rgb(209,209,211);
-
 }
 
-.debug {
+/* .debug {
   background-color: aqua;
   border: 7px solid black;
 }
@@ -25,7 +28,7 @@
 .debug2 {
   background-color: rgb(150, 150, 171);
   border:4px solid rgb(205, 123, 123)
-}
+}  */
 
 .d-flex {
   display: flex;
@@ -34,6 +37,7 @@
 .container {
   margin: 0 auto;
   max-width: 1050px;
+  margin-top: 150px;
 }
 
 header {
@@ -49,7 +53,6 @@ header {
 body  {
   font-family: var(--font-family)
 }
-
 
 .button {
   background-color: var(--background-button);
@@ -97,7 +100,6 @@ ul li {
 ul li a {
   text-decoration: none;
   color: var(--font-color);
-  margin-left: 42px;
   line-height: middle;
 }
 
@@ -105,6 +107,10 @@ header .navbar .row {
   justify-content: space-between;
   align-items: center;
   height: 80px;
+}
+
+.ul-menu li a {
+ margin-left: 42px;
 }
 
 .logo {
@@ -115,16 +121,17 @@ header .navbar .row {
   margin-right: 20px;
 }
 
+
 /* JUMBOTROM */
 .jum {
   background-color: var(--background-jumbotrom);
   min-height: 740px;
-  margin-bottom: 150px;
+/*   margin-bottom: 150px; */
 }
 
 .jumbotrom {
   margin: 0px auto;
-  max-width: 1053px;
+  max-width: 1300px;
   min-height: 650px;
   position: relative;
 }
@@ -261,6 +268,7 @@ p {
 
 .row-partner{
   margin-top: 150px;
+  margin-bottom: 150px;
 }
 
 .col-image {
@@ -291,7 +299,78 @@ p {
 /* DROPBOX */
 
 .col-dropbox {
- width:calc(100% / 3);
+ width:calc(100% / 3 - 17px);
+ margin-top: 40px ;
+}
+
+.width-margin {
+ margin-right: 25px;
+ margin-left: 25px;
+}
+
+.imges {
+  width: 100%;
+}
+
+.business{
+  font-size: 17px;
+  padding-top: 20px;
+}
+
+/* PERSON */
+.person {
+  font-size: 40px;
+  margin-top: 200px;
+  margin-bottom: 80px;
+}
+
+.buy-link {
+  text-decoration:underline;
+  margin-bottom: 150px;
 }
 
 
+/* FOOTER */
+.row-footer {
+  width: 100%;
+}
+
+
+footer {
+  background-color: black;
+  margin-top: 200px;
+  height: 650px;
+}
+
+.col-footer {
+  width: calc(100% / 5);
+  color: white;
+}
+
+.ul-footer li a {
+  color: white;
+}
+
+.ul-footer li {
+  padding-top: 20px;
+}
+
+.footer-li{
+  width: 7%;
+  border: 1px solid white;
+  margin-top: 200px;
+}
+
+.p-footer{
+  color: white;
+}
+
+.american {
+  color: white;
+}
+
+.icon {
+  position: absolute;
+  bottom: 133px;
+  font-size: 16px;
+}
