--- a/css/style.css
+++ b/css/style.css
@@ -148,17 +148,17 @@ header .navbar .row {
   font-size: 15px;
 }
 
-.icon {
+.again {
   font-size: 40px;
   color:  var(--font-color);
   position: absolute;
-  bottom: 20px
+  bottom: 30px
 }
 
 .img {
   position: absolute;
-  max-width: 780px;
-  height: 470px;
+  max-width: 100%;
+  height: 470px; 
   bottom: -70px;
   right: -87px;
 }
